--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a recent UC Davis graduate.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Born and raised in San Jose, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy cooking and reading.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I just want to feel like my work has value.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>San Jose, for now</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>My degree in Neurobiology doesn't lend itself to much outside of the health field, so I needed to go in a different direction.</p>
     </section>
 
     <footer id="footer">
